--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-<span>{{ title }} app is running!</span>
+<header>
+  <app-header></app-header>
+</header>
 
-<app-home></app-home>
-<app-produtos></app-produtos>
+<!-- MAIN -->
+
+<!-- FIM MAIN -->
+<main>
+  <router-outlet>
+    <app-land-page></app-land-page>
+  </router-outlet>
+</main>
+<!-- FOOTER -->
+<app-footer></app-footer>
+<!-- FIM FOOTER -->
