--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,19 @@
+<!-- NAVBAR -->
 <header>
   <app-header></app-header>
 </header>
+<!-- FIM NAVBAR -->
 
 <!-- MAIN -->
-
-<!-- FIM MAIN -->
 <main>
-  <router-outlet>
-    <app-land-page></app-land-page>
-  </router-outlet>
+  <router-outlet></router-outlet>
 </main>
+<!-- FIM MAIN -->
+
 <!-- FOOTER -->
-<app-footer></app-footer>
+<app-footer>
+  <span style="font-weight: bold">{{this?.dataAtual | date: "HH:mm:ss"}}</span>
+  - Latitude: {{ this.coords?.latitude}} e Longitude:
+  {{ this.coords?.longitude}}
+</app-footer>
 <!-- FIM FOOTER -->
