--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,19 +3,21 @@
   <nav>
     <div class="nav-wrapper blue">
       <div class="container">
-        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#" class="brand-logo">
+          <img src="./assets/resources/images/logo.png" class="my-logo">
+        </a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
+          <li><a routerLink="">Home</a></li>
+          <li><a routerLink="produto">Produtos</a></li>
+          <li><a routerLink="lista">Minha Lista</a></li>
+          <!-- <li><a href="mobile.html">Mobile</a></li> -->
         </ul>
         <ul class="sidenav blue white-text" id="mobile-demo" #mobile>
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
+          <li><a routerLink="">Home</a></li>
+          <li><a routerLink="produto">Produtos</a></li>
+          <li><a routerLink="lista">Minha Lista</a></li>
+          <!-- <li><a href="mobile.html">Mobile</a></li> -->
         </ul>
       </div>
     </div>
