--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -2,8 +2,12 @@
   <div class="container">
     <div class="row">
       <div class="col s12 center">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+
+        <h5 class="white-text">
+          <img src="./assets/resources/images/logo.png" class="my-logo">
+          Lista de Compras
+        </h5>
+        <p class="grey-text text-lighten-4">Organize sua lista para facilitar no momento da sua compra.</p>
       </div>
       <div class="col l4 offset-l2 s12">
         <!-- <h5 class="white-text">Links</h5>
@@ -17,9 +21,10 @@
     </div>
   </div>
   <div class="footer-copyright">
-    <div class="container">
+    <div class="container my-font">
       © Copyright - {{this.year}} - Todos os direitos reservados
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <!-- <a class="grey-text text-lighten-4 right">More Links</a> -->
     </div>
+    <ng-content></ng-content>
   </div>
 </footer>
