--- a/src/app/land-page/land-page.component.html
+++ b/src/app/land-page/land-page.component.html
@@ -17,27 +17,35 @@
     <div class="row">
       <!-- serviços -->
       <div class="col s12 m6">
-        <a href="#">
-          <div class="card-panel blue center my-card-button">
-            <span class="white-text flow-text"> Incluir </span>
-          </div>
-        </a>
-      </div>
-      <div class="col s12 m6">
-        <a href="#">
-          <div class="card-panel blue center my-card-button">
-            <span class="white-text flow-text"> Listar </span>
-          </div>
-        </a>
-      </div>
-      <div class="col s12 m6">
-        <a href="#">
+        <a routerLink="/produto">
           <div class="card-panel blue center my-card-button">
             <span class="white-text flow-text"> Produtos </span>
           </div>
         </a>
       </div>
-
+      <div class="col s12 m6">
+        <a [routerLink]="['produto']" [queryParams]="{ tipo: 'academico' }">
+          <div class="card-panel blue center my-card-button">
+            <span class="white-text flow-text"> Produtos Acadêmico </span>
+          </div>
+        </a>
+      </div>
+      <div class="col s12 m6">
+        <a href="lista">
+          <div class="card-panel blue center my-card-button">
+            <span class="white-text flow-text"> Minha Lista </span>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
+  <!-- <div id="produto" class="row">
+    <div class="col s12 m6 offset-m3">
+      <a routerLink="produto">
+        <div id="botao-produto" class="card-panel blue center my-card-button">
+          <span class="white-text flow-text"> Produto</span>
+        </div>
+      </a>
+    </div>
+  </div> -->
 </div>
