--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,9 +14,9 @@
           <!-- <li><a href="mobile.html">Mobile</a></li> -->
         </ul>
         <ul class="sidenav blue white-text" id="mobile-demo" #mobile>
-          <li><a routerLink="">Home</a></li>
-          <li><a routerLink="produto">Produtos</a></li>
-          <li><a routerLink="lista">Minha Lista</a></li>
+          <li><a class="waves-effect" routerLink="">Home</a></li>
+          <li><a class="waves-effect" routerLink="produto">Produtos</a></li>
+          <li><a class="waves-effect" routerLink="lista">Minha Lista</a></li>
           <!-- <li><a href="mobile.html">Mobile</a></li> -->
         </ul>
       </div>
